--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="refresh" content="15;URL=https://github.com/reimu59549/issue-only-blog/issues">
 </head>
 <body>
 <p>これはGithub issue専用のブログです。</p>
-<a href="">ブログに移動</a>
+<p>15秒後にブログ（GithubIssue）にリダイレクトします。</p>
+<a href="https://github.com/reimu59549/issue-only-blog/issues">ブログに移動</a>
 </body>
 </html>
