--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="refresh" content="15;URL=https://github.com/reimu59549/issue-only-blog/issues">
 </head>
 <body>
-<p>これはGithub issue専用のブログです。</p>
-<p>15秒後にブログ（GithubIssue）にリダイレクトします。</p>
+<p>これはGithub issue専用のブログです。</p><br>
+<p>15秒後にブログ（GithubIssue）にリダイレクトします。</p><br>
 <a href="https://github.com/reimu59549/issue-only-blog/issues">ブログに移動</a>
 </body>
 </html>
