--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <p>これはGithub issue専用のブログです。</p><br>
 <p>15秒後にブログ（GithubIssue）にリダイレクトします。</p><br>
 <a href="https://github.com/reimu59549/issue-only-blog/issues">ブログに移動</a>
+<p>博麗霊夢</p>
 </body>
 </html>
